v1.18/examples/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80 

---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
#  namespace: web
spec:
  selector:
    app: nginx
#  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
#    nodePort: 30001
